Implement first 2 home page containers

--- a/responsive-website/src/app/navigation-bar/navigation-bar.component.html
+++ b/responsive-website/src/app/navigation-bar/navigation-bar.component.html
@@ -37,5 +37,5 @@
 </ng-template>
 
 <ng-template #logo>
-  <a class="nav-item logo" routerLink="/"><img src="../../assets/Logo.svg"></a>
+  <img src="../../assets/Logo.svg">
 </ng-template>
