--- a/responsive-website/src/app/app.component.html
+++ b/responsive-website/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navigation-bar></app-navigation-bar>
-<router-outlet></router-outlet>
+<div class="page-wrapper">
+    <router-outlet></router-outlet>
+</div>
