--- a/responsive-website/src/app/app.component.scss
+++ b/responsive-website/src/app/app.component.scss
@@ -1,3 +1,12 @@
 .page-wrapper {
-    padding-top: 1em;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.footer {
+    position: fixed;
+    height: 60px;
+    width: 100%;
+    bottom: 0px;
+    background-color: blue;
 }
