--- a/responsive-website/src/app/navigation-bar/navigation-bar.component.html
+++ b/responsive-website/src/app/navigation-bar/navigation-bar.component.html
@@ -37,5 +37,5 @@
 </ng-template>
 
 <ng-template #logo>
-  <img src="../../assets/Logo.svg">
+  <div class="logo"><img src="../../assets/logo.svg"></div>
 </ng-template>
