--- a/responsive-website/src/app/navigation-bar/navigation-bar.component.scss
+++ b/responsive-website/src/app/navigation-bar/navigation-bar.component.scss
@@ -1,7 +1,12 @@
 .nav-bar {
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    top: 0px;
     height: 60px;
     box-shadow: 0px 2px 12px #00000029;
     overflow: hidden;
+    z-index: 1;
 
     .nav-bar-content {
         display: flex;
@@ -22,7 +27,7 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        top: 14px;
+        top: 17px;
         left: 3em;
         .icon-bar {
             width: 22px;
@@ -56,6 +61,7 @@
 .overlay {
     height: 100%;
     width: 0;
+    top: 60px;
     position: fixed;
     z-index: 1;
     left: 0;
