--- a/responsive-website/src/app/app.component.html
+++ b/responsive-website/src/app/app.component.html
@@ -3,5 +3,6 @@
     <router-outlet></router-outlet>
 </div>
 <div class="footer">
-
+    <img class="logo" src="../assets/logo_alt.svg">
+    <span>All rights reserved ©</span>
 </div>
