--- a/responsive-website/src/app/home-page/home-page.component.html
+++ b/responsive-website/src/app/home-page/home-page.component.html
@@ -27,43 +27,47 @@
 
 <div class="logos-container">
     <div class="logos-wrapper">
-        <div class="wrapper"><img src="../../assets/logo_number_1.svg"></div>
-        <div class="wrapper"><img src="../../assets/logo_number_1.svg"></div>
-        <div class="wrapper"><img src="../../assets/logo_number_1.svg"></div>
-        <div class="wrapper"><img src="../../assets/logo_number_1.svg"></div>
-        <div class="wrapper"><img src="../../assets/logo_number_1.svg"></div>
+        <div class="wrapper"><a routerLink="/products"><img src="../../assets/logo_number_1.svg"></a></div>
+        <div class="wrapper"><a routerLink="/products"><img src="../../assets/logo_number_1.svg"></a></div>
+        <div class="wrapper"><a routerLink="/products"><img src="../../assets/logo_number_1.svg"></a></div>
+        <div class="wrapper"><a routerLink="/products"><img src="../../assets/logo_number_1.svg"></a></div>
+        <div class="wrapper"><a routerLink="/products"><img src="../../assets/logo_number_1.svg"></a></div>
     </div>
 </div>
 
 <div class="blog-posts-container">
     <div class="blog-posts-wrapper">
         <div class="wrapper">
-            <div class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></div>
+            <a routerLink="/blog" class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></a>
             <div class="text-wrapper">
                 <span class="title">Blog Title #1</span>
                 <span class="excerpt">Blog excerpt - first lines - for approx two lines</span>
             </div>
         </div>
         <div class="wrapper">
-            <div class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></div>
+            <a routerLink="/blog" class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></a>
             <div class="text-wrapper">
                 <span class="title">Blog Title #1</span>
                 <span class="excerpt">Blog excerpt - first lines - for approx two lines</span>
             </div>
         </div>
         <div class="wrapper" *ngIf="!(mobileBreakpoint$ | async)">
-            <div class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></div>
+            <a routerLink="/blog" class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></a>
             <div class="text-wrapper">
                 <span class="title">Blog Title #1</span>
                 <span class="excerpt">Blog excerpt - first lines - for approx two lines</span>
             </div>
         </div>
         <div class="wrapper" *ngIf="!(mobileBreakpoint$ | async)">
-            <div class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></div>
+            <a routerLink="/blog" class="image-wrapper"><img src="../../assets/dustin-lee-19667-unsplash.png"></a>
             <div class="text-wrapper">
                 <span class="title">Blog Title #1</span>
                 <span class="excerpt">Blog excerpt - first lines - for approx two lines</span>
             </div>
         </div>
     </div>
+</div>
+
+<div class="btn-container">
+    <button class="btn">Read more</button>
 </div>
