--- a/responsive-website/src/app/home-page/home-page.component.scss
+++ b/responsive-website/src/app/home-page/home-page.component.scss
@@ -3,6 +3,10 @@
     width: 100%;
 }
 
+span, p {
+    color: #394E5D;
+}
+
 .container-1 {
     display: flex;
     margin: 10em auto auto auto;
@@ -211,13 +215,19 @@
 .blog-posts-container {
     display: flex;
     margin: auto auto auto auto;
-    // width: 100%;
+    width: 100%;
     height: 20%;
 
     .blog-posts-wrapper {
         display: flex;
         margin: auto;
         height: 100%;
+        width: fit-content;
+        max-width: 76%;
+
+        @media (max-width: 1024px) {
+            max-width: 95%;
+        }
 
         .wrapper {
             display: flex;
@@ -295,5 +305,25 @@
                 }
             }
         }
+    }
+}
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+    margin: 60px 0;
+    .btn {
+        color: #4285BC;
+        letter-spacing: 0;
+        background: #FFFFFF 0% 0% no-repeat padding-box;
+        border: 1px solid #3D86BF;
+        border-radius: 32px;
+        height: 38px;
+        width: 140px;
+    }
+
+    .btn:hover {
+        color: #ffffff;
+        background: #4285BC 0% 0% no-repeat padding-box;
     }
 }
