--- a/responsive-website/src/app/home-page/home-page.component.html
+++ b/responsive-website/src/app/home-page/home-page.component.html
@@ -69,5 +69,5 @@
 </div>
 
 <div class="btn-container">
-    <button class="btn">Read more</button>
+    <button (click)="readMore()" class="btn">Read more</button>
 </div>
